Minor changes to workflow initialization

--- a/frontend/src/app/components/pages/workflow-page/workflow-page.component.html
+++ b/frontend/src/app/components/pages/workflow-page/workflow-page.component.html
@@ -64,4 +64,11 @@
       </div>
     </div>
   </div>
+  <button
+    class="btn btn-primary mt-3"
+    [disabled]="!ttlFile || !txtFile"
+    (click)="onSubmit()"
+  >
+    Submit Files
+  </button>
 </div>
