--- a/frontend/src/app/components/pages/unification-page/unification-page.component.html
+++ b/frontend/src/app/components/pages/unification-page/unification-page.component.html
@@ -1,1 +1,39 @@
-<p>unification-page works!</p>
+<div *ngIf="unificationFirstStepComplete" class="container">
+  <h1 class="mt-5 text-center">Unify AI Workflow with Provenance Questions</h1>
+  <hr />
+  <app-pq-clarification-section
+    *ngIf="
+      unificationFirstStepResponse &&
+      unificationFirstStepResponse.unificationClarificationResponse
+    "
+    [clarificationRequests]="
+      unificationFirstStepResponse.unificationClarificationResponse
+    "
+  ></app-pq-clarification-section>
+  <hr />
+  <app-ai-workflow-visualizer
+    *ngIf="
+      unificationFirstStepResponse && unificationFirstStepResponse.workflow
+    "
+    [workflow]="unificationFirstStepResponse.workflow"
+  ></app-ai-workflow-visualizer>
+</div>
+
+<div
+  *ngIf="!unificationFirstStepComplete"
+  class="position-fixed top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center"
+  style="background: rgba(128, 128, 128, 0.5); z-index: 1050"
+>
+  <div
+    class="spinner-border text-primary mb-3"
+    style="width: 4rem; height: 4rem"
+    role="status"
+  >
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <div class="text-center">
+    <p class="mb-0 fw-bold">
+      Waiting for the first step of unification to complete...
+    </p>
+  </div>
+</div>
