--- a/frontend/src/app/components/pages/workflow-page/workflow-page.component.scss
+++ b/frontend/src/app/components/pages/workflow-page/workflow-page.component.scss
@@ -1,7 +1,8 @@
 .drop-zone {
-  transition: border 0.3s ease;
+  transition: all 0.3s ease;
   border: 2px dashed #ccc;
   background-color: #f8f9fa;
+  cursor: pointer;
 
   &.drag-over {
     border-color: #0d6efd;
@@ -11,4 +12,14 @@
   p {
     margin: 0;
   }
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(240, 240, 240, 0.8);
+  z-index: 10;
 }
