Add trace template frontend

--- a/frontend/src/app/components/pages/unification-page/unification-page.component.html
+++ b/frontend/src/app/components/pages/unification-page/unification-page.component.html
@@ -9,6 +9,7 @@
     [clarificationRequests]="
       unificationFirstStepResponse.unificationClarificationResponse
     "
+    (submitEventEmitter)="receiveResponse($event)"
   ></app-pq-clarification-section>
   <hr />
   <app-ai-workflow-visualizer
